close card dark mode fix

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -84,6 +84,9 @@ body.dark {
   .unlockModal{
     background-color:#000000
   }
+  .showNFCWrapper{
+    background:#000!important
+  }
   .bottom-menu-active{
     color:#ffffff
   }
